[project]
name = "sns-analytics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matsu.jp", email = "chemical.plek@gmial.com" }
]
dependencies = [
    "streamlit>=1.36.0",
    "tweepy>=4.14.0",
    "ipykernel>=6.29.5",
    "streamlit-aggrid>=1.0.5",
    "python-dotenv>=1.0.1",
    "streamlit-authenticator>=0.3.2",
    "pyrebase4>=4.8.0",
    "setuptools>=71.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sns_analytics"]
